@@ -1,0 +1,6 @@
+../grep-dctrl/grep-dctrl: 0010.in:3: warning: expected a colon.
+../grep-dctrl/grep-dctrl: 0010.in:3: warning: expected a colon.
+../grep-dctrl/grep-dctrl: 0010.in:3: warning: expected a colon.
+../grep-dctrl/grep-dctrl: 0010.in:4: warning: expected a colon.
+../grep-dctrl/grep-dctrl: 0010.in:6: warning: expected a colon.
+../grep-dctrl/grep-dctrl: 0010.in:6: warning: expected a colon.
