@@ -10,8 +10,10 @@ dctrl-tools (2.23) UNRELEASED; urgency=low
     good idea in any case).
   * Add -Wextra to non-package builds (and clean up the resulting warnings).
   * lib/msg.c (msg_primitive): Write the period before the newline, not after!
+  * tests/0022.{out,err,fails}: New test case, for grep-dctrl
+    --ignore-parse-errors
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Fri, 08 Jun 2012 22:38:22 +0300
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Fri, 08 Jun 2012 22:39:44 +0300
 
 dctrl-tools (2.22.2) unstable; urgency=low
 
